# waggle-mcp

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: labels.yml
benchmark_results/: ablation_results.csv  ablation_results.json  ablation_results.md  ablation_results_partial.csv  pairwise_hidden_edge_ablation.md
benchmarks/: answer_level_eval.py  debug_context_reset.py  failure_analysis.py  generate_paper_tables.py  make_research_report.py  rlm_style_waggle_eval.py  run_ablation.py
docs/: automatic-memory-rules.md  benchmark-methodology.md  benchmarking-pytorch-vs-onnx-waggle.md  codex-plugin-runtime.md  environment-variables.md  good-first-issues.md  how-waggle-saves-tokens.md  reference.md
examples/: antigravity_mcp_config.example.json  codex_config.example.toml  generate_demo_abhi.py
scripts/: __init__.py  backup_restore_drill.py  bench_connection_pool.py  benchmark_convomem.py  benchmark_embed.py  benchmark_extraction.py  benchmark_locomo.py  benchmark_longmemeval.py  benchmark_membench.py  benchmark_oolong.py  benchmark_token_efficiency.py  build_codex_plugin_runtime.py  check_distribution.py  comprehensive_feature_demo.py  demo_recording_flow.py  export_onnx.py  gen_oolong_data.py  generate_abhi_fixtures.py  load_test.py  package_codex_plugin.py  run_longmemeval_v3_retrieval_only.py  run_memory_benchmark.py  run_oolong_pairs_paper_eval.py  simulated_llm.py  smoke_test_mcp.py  sync_github_labels.py  verify_docker_model.py
tests/: conftest.py  test_auth.py  test_config.py  test_connection_pool.py  test_context_bundle.py  test_convomem_benchmark.py  test_dedup.py  test_distribution_cli.py  test_graph.py  (+24 more)
(+80 files in other folders)
