[project]
name = "waggle-mcp"
version = "0.1.6"
description = "MCP server that gives LLMs persistent graph-structured memory"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "Abhigyan Shekhar" }
]
keywords = ["mcp", "knowledge-graph", "memory", "llm", "context"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "anyio>=4.4.0",
  "mcp>=1.0.0",
  "networkx>=3.2.1",
  "numpy>=1.26.0",
  "pydantic>=2.7.0",
  "python-louvain>=0.16",
  "pyvis>=0.3.2",
  "sentence-transformers>=2.6.0",
  "starlette>=0.37.2",
  "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/Abhigyan-Shekhar/Waggle-mcp"
Repository = "https://github.com/Abhigyan-Shekhar/Waggle-mcp"
Documentation = "https://github.com/Abhigyan-Shekhar/Waggle-mcp#readme"
"Bug Tracker" = "https://github.com/Abhigyan-Shekhar/Waggle-mcp/issues"
Changelog = "https://pypi.org/project/waggle-mcp/#history"

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
]
neo4j = [
  "neo4j>=5.20.0",
]

[project.scripts]
waggle-mcp = "waggle.server:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
